styles/style.css
#machineHolder {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  z-index: 1;
}

.machine {
  display: flex;
  margin: auto;
}

#top {
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  width: 720px;
  height: 0;
  border: 50px solid rgba(0,0,0,0);
  border-top: 0 solid;
  border-bottom: 110px solid #797979;
}

#middle {
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  width: 783px;
  height: 0px;
  border: 18px solid rgba(0,0,0,0);
  border-top: 160px solid #797979;
  border-bottom: 0px solid;
}

#middle2 {
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  width: 782px;
  height: 0px;
  border: 40px solid rgba(0,0,0,0);
  border-bottom: 450px solid #797979;
  border-top: 0px solid;
}

#bottom {
  box-sizing: content-box;
  width: 862px;
  height: 180px;
  background: #797979;
}

#top-inside {
  position: absolute;
  z-index: 1;
  -moz-box-sizing: content-box;
  width: 708px;
  border: 46px solid rgba(0,0,0,0);
  border-bottom: 100px solid #1d5da7;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  top: -39px;
}

#middle-inside {
  width: 757px;
  height: 0px;
  border: 18px solid rgba(0,0,0,0);
  border-top: 130px solid #1d5da7;
  border-bottom: 0px solid;
  position: absolute;
  z-index: 3;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  top: 117px;
}

#middle2-inside {
  position: absolute;
  z-index: 1;
  width: 742px;
  height: 0px;
  border: 35px solid rgba(0,0,0,0);
  border-bottom: 430px solid #1d5da7;
  border-top: 0px solid;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  top: 283px;
}
#bottom-inside {
  position: absolute;
  z-index: 1;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  width: 817px;
  height: 145px;
  background: #1d5da7;
  top: 730px;
}

.handle {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  right: -973px;
  left: 0;
  top: 330px;
  width: 160px;
  height: 400px;
}

#handle-joint1, #handle-joint2 {
  height: 75px;
  width: 31px;
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  left: -117px;
  right: 0;
  top: 251px;
  z-index: -1;
  background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 50%,rgb(67, 67, 67) 100%);
}

#handle-joint2 {
  top: 264px;
  right: 0px;
  left: -68px;
  height: 50px;
  width: 18px;
}

#handle-arm1 {
    height: 240px;
    width: 11px;
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: -67px;
    right: 0;
    top: 45px;
    z-index: 0;
    border-radius: 6px;
    background: linear-gradient(to right, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 50%,rgb(67, 67, 67) 100%);
}

.pullHandle {
  background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 50%,rgb(67, 67, 67) 100%);
  -webkit-animation: pullHandle 1s infinite;
  -moz-animation: pullHandle 1s infinite;
  -ms-animation: pullHandle 1s infinite;
  -o-animation: pullHandle 1s infinite;
  animation: pullHandle 1s alternate 0s 2;
}

@keyframes pullHandle {
    0% { background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 50%,rgb(67, 67, 67) 100%); }
    10% { background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 52.5%,rgb(67, 67, 67) 100%); }
    20% { background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 55%,rgb(67, 67, 67) 100%); }
    30% { background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 57.5%,rgb(67, 67, 67) 100%); }
    40% { background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 60%,rgb(67, 67, 67) 100%); }
    50% { background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 62.5%,rgb(67, 67, 67) 100%); }
    60% { background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 65%,rgb(67, 67, 67) 100%); }
    70% { background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 67.5%,rgb(67, 67, 67) 100%); }
    80% { background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 70%,rgb(67, 67, 67) 100%); }
    90% { background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 72.5%,rgb(67, 67, 67) 100%); }
    100% { background: linear-gradient(to bottom, rgb(67, 67, 67) 0%,rgb(207, 210, 208) 75%,rgb(67, 67, 67) 100%); }
}

#handle-ball {
  width: 39px;
  height: 39px;
  border-radius: 50%;
  background-color: #2f88ef;
  box-shadow: inset #1d436f 4px -6px 14px 1px,inset #225ea5 4px -6px 27px 1px;
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  top: 10px;
  left: 27px;
}

#tray {
  height: 110px;
  width: 500px;
  border: #4786ce solid 4px;
  background: black;
  display: flex;
  position: relative;
  z-index: 5;
  margin-left: auto;
  margin-right: auto;
  top: -153px;
  background: linear-gradient(to bottom, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 78%);
}

#tray-door {
  height: 110px;
  width: 500px;
  border: #4786ce solid 4px;
  background: black;
  display: flex;
  position: relative;
  z-index: 6;
  margin-left: auto;
  margin-right: auto;
  top: -273px;
  background: #4786ce;
}



#slotMachine, .reel, .lever {display: inline-block;}


#slotMachine {
  border-radius: 30px;
  padding: 20px 0 20px 0;
  display: flex;
}


#slotMachine {
  position: relative;
  width: 82%;
  height: 220px;
  margin: 20px auto;
  background: #194982;
  border-radius: 50% / 10%;
  color: white;
  text-align: center;
  text-indent: .1em;
}
#slotMachine:before {
  content: '';
  position: absolute;
  top: 9%;
  bottom: 9%;
  right: -5%;
  left: -5%;
  background: inherit;
  border-radius: 5% / 50%;
}



  .reel {
    text-align: center;
    float: left;
    padding: 0 10px;
    width: 170px;
    height: 180px;
    overflow: hidden;
    margin: auto;
    border-radius: 22px;
    background: #d0d7de;
    box-shadow: inset 2px 4px 1em #727279;
    border: solid rgba(0, 0, 0, 0.33) 1px;
    z-index: 1;
  }
    .reel .innerReel {
      position: relative;
      top: -91px;
      padding: 15px;
      background: #7095bf;
    }

    .reel .innerReel div {
      letter-spacing: 2px;
      font-size: 30px;
      font-family: Bangers, Helvetica;
      position: relative;
      height: 80px;
      padding: 15px;
      display: flex;
      justify-content: center;
      align-items: center;
      border-bottom: rgba(0, 0, 0, 0.25) solid 2px;
    }
    .reel p {
      font-weight: bold;
      height: 60px;
      margin-top: 10px;
    }
    .reel p:nth-child(1) {color:#c60}
    .reel p:nth-child(2) {color:#690}
    .reel p:nth-child(3) {color:#630}





\\\\\\\



#slotMachine {

}


html {
  font-size: 20px;
  font-family: Droid Sans, Helvetica;
  background-color: #000000;
}


h1 {
  font-size: 60px;
  text-align: center;
}

p, li {
  font-size: 16px;
  line-height: 2;
  letter-spacing: 1px;
}


#wrapper {
  width: 740px;
  height: 385px;
  /*background: linear-gradient(45deg, #868686 0%, #ececec 50%, #868686 100%);*/
  padding: 20px 20px 20px 20px;
  -moz-border-image: -moz-linear-gradient(top, #3acfd5 0%, #3a4ed5 100%);
  border-radius: 10%;
  z-index: 2;
  position: relative;
  margin: auto;
  top: 285px;
}

h1 {
  margin: 0;
  padding: 20px 0;
  color: #00539F;
  text-shadow: 3px 3px 1px black;
}

#playFancy {
  width: 233px;
  height: 71px;
  top: 311px;
  left: 0;
  right: 0;
  margin: auto;
  margin-left: auto;
  margin-right: auto;
  position: absolute;
  display: flex;
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  padding: 0 20px;
  border: none;
  -webkit-border-radius: 20px;
  border-radius: 20px;
  font: normal normal bold 20px/40px "Baumans", Helvetica, sans-serif;
  color: black;
  -o-text-overflow: clip;
  text-overflow: clip;
  background: rgb(221, 221, 221);
  -webkit-box-shadow: 0 1px 0 0 rgb(119,119,119) , 0 2px 0 0 rgb(119,119,119) , 0 3px 0 0 rgb(119,119,119) , 0 4px 0 0 rgb(119,119,119) , 0 5px 0 0 rgb(119,119,119) , 0 6px 0 0 rgb(119,119,119) , 0 0 5px 0 rgba(0,0,0,0.0980392) , 0 1px 3px 0 rgba(0,0,0,0.298039) , 0 3px 5px 0 rgba(0,0,0,0.2) , 0 5px 10px 0 rgba(0,0,0,0.247059) , 0 10px 10px 0 rgba(0,0,0,0.2) , 0 20px 20px 0 rgba(0,0,0,0.14902) ;
  box-shadow: 0 1px 0 0 rgb(119,119,119) , 0 2px 0 0 rgb(119,119,119) , 0 3px 0 0 rgb(119,119,119) , 0 4px 0 0 rgb(119,119,119) , 0 5px 0 0 rgb(119,119,119) , 0 6px 0 0 rgb(119,119,119) , 0 0 5px 0 rgba(0,0,0,0.0980392) , 0 1px 3px 0 rgba(0,0,0,0.298039) , 0 3px 5px 0 rgba(0,0,0,0.2) , 0 5px 10px 0 rgba(0,0,0,0.247059) , 0 10px 10px 0 rgba(0,0,0,0.2) , 0 20px 20px 0 rgba(0,0,0,0.14902) ;
  text-shadow: 0 1px 0 #FFFFFF ;
}

#playFancy:hover {
  background: #FFFFFF;
}

#playFancy:active {
  margin: 6px auto;
  background: rgb(221, 221, 221);
  -webkit-box-shadow: 0 -1px 10px 0 rgba(0,0,0,0.247059) , 0 4px 10px 0 rgba(0,0,0,0.2) , 0 14px 20px 0 rgba(0,0,0,0.14902) ;
  box-shadow: 0 -1px 10px 0 rgba(0,0,0,0.247059) , 0 4px 10px 0 rgba(0,0,0,0.2) , 0 14px 20px 0 rgba(0,0,0,0.14902) ;
}

#playFancy:focus {
  background: rgb(221, 221, 221);
  outline: 0;
}


/*Positioning Lights CSS*/

.lights {
  width: 24px;
  position: absolute;
  z-index: 3;
  top: 298px;
  margin-left: auto;
  margin-right: auto;
}

#lights1 {
  transform: rotate(-4.5deg);
  left: 744px;
  right: 0px;
}

#lights2 {
  transform: rotate(4.5deg);
  right: 744px;
  left: 0px;
}

#lights3 {
  width: 710px;
  left: 232px;
  top: 298px;
}

#lights4 {
  width: 780px;
  left: 200px;
  top: 689px;
}

#winner {
  font-size: 115px;
  position: absolute;
  z-index: 4;
  top: 84px;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  transform: perspective(520px) rotateX(-15deg);
}

#tea-img {
  height: 72px;
  top: 790px;
}

#espresso-img {
  height: 50px;
  top: 812px;
}

#coffee-img {
  height: 82px;
  top: 780px;
}

.images {
  z-index: 5;
  position: absolute;
  display: flex;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
}

#footer{
  position: fixed;
  bottom: 0px;
  width: 100%;
  text-align: center;
}

#logo {
  color: #c6d7ea;
  text-shadow: black 4px 5px;
  font-size: 100px;
  position: absolute;
  z-index: 4;
  top: 5px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  left: 0;
  right: 0;
  font-family: Bangers, Helvetica;
}

#thumbtack-logo {
  height: 75px;
}

